# zipstripper-lite

./: .gitignore  .zipstripperignore.example  LICENSE  README.md  SECURITY.md  ZipStripperLite-GUI.cmd  ZipStripperLite.cmd  pyproject.toml  zip_stripper_lite.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
tests/: test_lite.py
